--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -39,7 +39,7 @@
 
   </table>
 
-<button type="button">Edit</button>
+<button routerLink="/updatedetails" routerLinkActive="active">Edit</button>
 
 </div>
 </div>
